<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.leonardlee.iotasynctask.MainActivity"
    android:background="@android:color/background_dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            android:textColor="@color/whiteColor"
            android:text="@string/titleLabel"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/temperatureLabel"
                android:textColor="@color/whiteColor"/>
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/txtTemperature"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@color/whiteColor"
                android:lines="1"
                android:digits="0123456789"
                android:imeOptions="actionDone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_marginLeft="30dp"
                android:text="@string/humidityLabel"
                android:textColor="@color/whiteColor"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/txtHumility"
                android:lines="1"
                android:digits="0123456789"
                android:background="@color/whiteColor"
                android:layout_marginLeft="10dp"
                android:imeOptions="actionDone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_marginLeft="30dp"
                android:text="@string/activityLabel"
                android:textColor="@color/whiteColor"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/txtActivity"
                android:lines="1"
                android:digits="0123456789"
                android:background="@color/whiteColor"
                android:layout_marginLeft="10dp"
                android:imeOptions="actionDone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_marginLeft="30dp"
                android:text="@string/numLabel"
                android:textColor="@color/whiteColor"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/txtNum"
                android:lines="1"
                android:digits="0123456789"
                android:background="@color/whiteColor"
                android:layout_marginLeft="10dp"
                android:imeOptions="actionDone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/btnGenerate"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:onClick="btnGenClicked"
                android:text="@string/gen_btn"
                android:textAllCaps="false"
                android:textColor="@color/whiteColor"
                android:textSize="30dp" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/custom_button"
                android:onClick="btnCancelClicked"
                android:text="@string/cancel_btn"
                android:textAllCaps="false"
                android:textColor="@color/whiteColor"
                android:textSize="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtOutput"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/whiteColor"
                android:ems="10"
                android:inputType="textMultiLine"
                />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
